main section added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kakza</title>
     <!--  Tailwind CDN link -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="">
     <!-- header -->
@@ -29,14 +30,41 @@
         </nav>
       </div>
     </header>
+    <main
+      class="min-h-screen flex items-center justify-center bg-[radial-gradient(circle_at_top,_#e0f7fa,_#f3e5f5,_#e8eaf6)] text-gray-900 px-4"
+    >
+      <div class="w-full max-w-4xl text-center space-y-6">
+        <!-- Notification Badge -->
+        <p
+          class="text-xs sm:text-sm drop-shadow-md px-4 py-2 rounded-full border border-sky-500 text-sky-500 group inline-flex items-center justify-center gap-1 mx-auto"
+        >
+          Next Gen Arriving soon: The AI-powered teaching enablement platform
+          for schools.
+          <span
+            class="inline-block transition-transform duration-500 group-hover:translate-x-1"
+          >
+            👋
+          </span>
+        </p>
 
-    <!-- main -->
-    <main class="min-h-screen flex items-center justify-center bg-gray-100">
-      <div class="text-center">
-        <h2 class="text-3xl font-bold mb-4">Welcome to Kakza</h2>
-        <p class="text-lg text-gray-600">We transform education with tech.</p>
+        <!-- Main Heading -->
+        <h1
+          class="text-3xl sm:text-5xl md:text-6xl lg:text-7xl font-bold drop-shadow-sm text-sky-500 text-center"
+        >
+          Transform Classroom Learning with AI-Driven!
+        </h1>
+
+        <!-- Subtext -->
+        <p
+          class="text-base sm:text-lg text-gray-700 leading-relaxed px-2 sm:px-10 lg:px-20"
+        >
+          Kakza is an all-in-one platform that leverages artificial intelligence
+          to support smarter teaching, informed leadership, and personalized
+          learning. Unlock efficiency and elevate educational outcomes.
+        </p>
       </div>
     </main>
+
     <!--core -->
     <section></section>
     <!-- Ready to transform you school -->
