steps section added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
         class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between"
       >
         <!-- logo -->
-        <h1 class="text-lg md:text-xl font-bold text-gray-900 cursor-pointer">
-          Kakza
-        </h1>
+        <div class="flex gap-4">
+          <img
+            src="./images//templogo.png"
+            alt="logo"
+            class="w-auto h-[30px]"
+          />
+          <h1 class="text-lg md:text-xl font-bold text-gray-900 cursor-pointer">
+            Kakza
+          </h1>
+        </div>
         <!-- Navigation -->
         <nav>
           <ul class="text-sm sm:text-base text-gray-700">
@@ -66,7 +73,144 @@
     </main>
 
     <!--core -->
-    <section></section>
+    <section
+      class="min-h-screen bg-[rgb(15,_23,_42)] flex items-center flex-col gap-10 justify-center px-4 lg:py-0 py-10"
+    >
+      <p
+        class="md:text-lg text-sm  w-full sm:w-4/5 md:w-3/4 lg:w-1/2 text-center text-gray-400"
+      >
+        Discover how kakza empowers your school community with advanced AI tools
+        and actionable insights.
+      </p>
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 max-w-6xl w-full">
+        <div
+          class="rounded-xl p-6 bg-transparent hover:bg-slate-950 transition duration-200"
+          style="box-shadow: 0px 0px 0.1px 1px #262a3393"
+        >
+          <div class="flex gap-2 justify-center flex-col items-center mb-4">
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-6 h-6 text-sky-500"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M7.5 3A2.25 2.25 0 0 0 5.25 5.25v.75a2.25 2.25 0 0 0 0 4.5v1.5a2.25 2.25 0 0 0 0 4.5v.75A2.25 2.25 0 0 0 7.5 21m0-18a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 7.5 21m0-18h3m6 0A2.25 2.25 0 0 1 19.5 5.25v.75a2.25 2.25 0 0 1 0 4.5v1.5a2.25 2.25 0 0 1 0 4.5v.75A2.25 2.25 0 0 1 16.5 21m0-18a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 16.5 21m0-18h-3"
+                />
+              </svg>
+            </div>
+            <h3 class="md:text-2xl text-xl font-semibold text-gray-100 mb-1">
+              Interactive Lessons
+            </h3>
+          </div>
+          <p class="text-gray-300 md:text-lg text-sm text-center">
+            Engage students with hands-on digital learning modules.
+          </p>
+        </div>
+
+        <!-- Card 2 -->
+        <div
+          class="rounded-xl p-6 bg-transparent hover:bg-slate-950 transition duration-200"
+          style="box-shadow: 0px 0px 0.1px 1px #262a3393"
+        >
+          <div class="flex gap-2 justify-center flex-col items-center mb-4">
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="64"
+                height="64"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                class="w-6 h-6 text-sky-500"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 1v11m6-5a6 6 0 01-12 0V6a6 6 0 0112 0v1zM5 12a7 7 0 0014 0M12 19v4m-4 0h8"
+                />
+              </svg>
+            </div>
+            <h3 class="md:text-2xl text-xl font-semibold text-gray-100 mb-1">
+              Live Sessions
+            </h3>
+          </div>
+          <p class="text-gray-300  md:text-lg text-sm text-center">
+            Streamlined live classes with real-time collaboration.
+          </p>
+        </div>
+        <!--  -->
+        <!-- Card 3 -->
+        <div
+          class="rounded-xl p-6 bg-transparent hover:bg-slate-950 transition duration-200"
+          style="box-shadow: 0px 0px 0.1px 1px #262a3393"
+        >
+          <div class="flex gap-2 justify-center flex-col items-center mb-4">
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="64"
+                height="64"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                class="w-6 h-6 text-sky-500"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 7a4 4 0 11-8 0 4 4 0 018 0zm5 4a2 2 0 100-4 2 2 0 000 4zm-6 6v-1a4 4 0 00-4-4H5a4 4 0 00-4 4v1m13 0v-1a4 4 0 013-3.87M19 17v-1a3 3 0 00-2-2.82"
+                />
+              </svg>
+            </div>
+            <h3 class="md:text-2xl text-xl font-semibold text-gray-100 mb-1">
+              Informed Leadership
+            </h3>
+          </div>
+          <p class="text-gray-300  md:text-lg text-sm text-center">
+            Actionable data for school leadership and teachers
+          </p>
+        </div>
+        <!-- Card 4 -->
+        <div
+          class="rounded-xl p-6 bg-transparent hover:bg-slate-950 transition duration-200"
+          style="box-shadow: 0px 0px 0.1px 1px #262a3393"
+        >
+          <div class="flex gap-2 justify-center flex-col items-center mb-4">
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-6 h-6 text-sky-500"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 6v6l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                />
+              </svg>
+            </div>
+            <h3 class="md:text-2xl text-xl font-semibold text-gray-100 mb-1">
+              Time Efficiency
+            </h3>
+          </div>
+          <p class="text-gray-300  md:text-lg text-sm text-center">
+            Automates grading and admin, freeing teachers to teach
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- Ready to transform you school -->
     <section></section>
   </body>
