full site ready

--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
       class="min-h-screen bg-[rgb(15,_23,_42)] flex items-center flex-col gap-10 justify-center px-4 lg:py-0 py-10"
     >
       <p
-        class="md:text-lg text-sm  w-full sm:w-4/5 md:w-3/4 lg:w-1/2 text-center text-gray-400"
+        class="md:text-lg text-sm w-full sm:w-4/5 md:w-3/4 lg:w-1/2 text-center text-gray-400"
       >
         Discover how kakza empowers your school community with advanced AI tools
         and actionable insights.
       </p>
+
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 max-w-6xl w-full">
         <div
           class="rounded-xl p-6 bg-transparent hover:bg-slate-950 transition duration-200"
@@ -141,7 +142,7 @@
               Live Sessions
             </h3>
           </div>
-          <p class="text-gray-300  md:text-lg text-sm text-center">
+          <p class="text-gray-300 md:text-lg text-sm text-center">
             Streamlined live classes with real-time collaboration.
           </p>
         </div>
@@ -174,7 +175,7 @@
               Informed Leadership
             </h3>
           </div>
-          <p class="text-gray-300  md:text-lg text-sm text-center">
+          <p class="text-gray-300 md:text-lg text-sm text-center">
             Actionable data for school leadership and teachers
           </p>
         </div>
@@ -204,14 +205,65 @@
               Time Efficiency
             </h3>
           </div>
-          <p class="text-gray-300  md:text-lg text-sm text-center">
+          <p class="text-gray-300 md:text-lg text-sm text-center">
             Automates grading and admin, freeing teachers to teach
           </p>
         </div>
       </div>
     </section>
+    <!-- Ready to transform your school -->
+    <section
+      class="min-h-screen bg-[radial-gradient(circle_at_top,_#d1f1ff,_#fdf6e3,_#fce4ec)] flex flex-col justify-center items-center px-4"
+    >
+      <div
+        class="flex flex-col items-center text-center gap-6 max-w-3xl w-full"
+      >
+        <!-- Heading -->
+        <p class="text-3xl sm:text-5xl font-bold whitespace-nowrap">
+          Ready to Transform Your School?
+        </p>
 
-    <!-- Ready to transform you school -->
-    <section></section>
+        <!-- Subtext -->
+        <p class="text-lg text-gray-700">
+          Contact us today to discover how kakza can empower your teachers,
+          leaders, and students.
+        </p>
+
+        <!-- Button -->
+        <a href="mailto:contact@kakza.com">
+          <button
+            class="bg-sky-500 hover:bg-sky-600 text-white font-semibold py-2 px-6 rounded-lg transition duration-200"
+          >
+            Contact Us
+          </button>
+        </a>
+      </div>
+    </section>
+    <footer class="py-8 px-6">
+      <div
+        class="max-w-6xl mx-auto flex flex-col sm:flex-row justify-between items-center gap-4 text-center sm:text-left"
+      >
+        <!-- Left Side -->
+        <div>
+          <h2 class="text-xl font-bold">Kakza</h2>
+          <p class="text-sm">Empowering Schools with AI & Insights</p>
+        </div>
+
+        <!-- Center -->
+        <div>
+          <p class="text-sm font-semibold">
+            Made with <span class="text-red-600">❤️</span> in India
+          </p>
+          <p class="text-xs">© 2025 Kakza. All rights reserved.</p>
+        </div>
+
+        <!-- Right Side -->
+        <div class="flex gap-4 text-sm font-medium">
+          <a href="#" class="hover:underline">Privacy</a>
+          <a href="#" class="hover:underline">Terms</a>
+          <a href="#" class="hover:underline">Contact</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
