--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -213,18 +213,19 @@
     </section>
     <!-- Ready to transform your school -->
     <section
+      id="contact"
       class="min-h-screen bg-[radial-gradient(circle_at_top,_#d1f1ff,_#fdf6e3,_#fce4ec)] flex flex-col justify-center items-center px-4"
     >
       <div
         class="flex flex-col items-center text-center gap-6 max-w-3xl w-full"
       >
         <!-- Heading -->
-        <p class="text-3xl sm:text-5xl font-bold whitespace-nowrap">
+        <p class="text-2xl md:text-5xl font-bold whitespace-nowrap">
           Ready to Transform Your School?
         </p>
 
         <!-- Subtext -->
-        <p class="text-lg text-gray-700">
+        <p class="md:text-lg text-sm text-gray-700">
           Contact us today to discover how kakza can empower your teachers,
           leaders, and students.
         </p>
@@ -232,7 +233,7 @@
         <!-- Button -->
         <a href="mailto:contact@kakza.com">
           <button
-            class="bg-sky-500 hover:bg-sky-600 text-white font-semibold py-2 px-6 rounded-lg transition duration-200"
+            class="bg-sky-500 hover:bg-sky-600 text-white font-semibold py-2 md:px-6 px-4  rounded-lg transition duration-200"
           >
             Contact Us
           </button>
