--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="">
     <!-- header -->
-    <header class="bg-white shadow sticky top-0 z-50">
+    <header class="bg- shadow sticky top-0 z-50">
       <div
         class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between"
       >
@@ -43,7 +43,7 @@
       <div class="w-full max-w-4xl text-center space-y-6">
         <!-- Notification Badge -->
         <p
-          class="text-xs sm:text-sm drop-shadow-md px-4 py-2 rounded-full border border-sky-500 text-sky-500 group inline-flex items-center justify-center gap-1 mx-auto"
+          class="text-xs sm:text-sm drop-shadow-md px-4 py-2 rounded-full bg-sky-500 text-white text-sky-500 group inline-flex items-center justify-center gap-1 mx-auto"
         >
           Next Gen Arriving soon: The AI-powered teaching enablement platform
           for schools.
@@ -214,7 +214,7 @@
     <!-- Ready to transform your school -->
     <section
       id="contact"
-      class="min-h-screen bg-[radial-gradient(circle_at_top,_#d1f1ff,_#fdf6e3,_#fce4ec)] flex flex-col justify-center items-center px-4"
+      class="min-h-[500px] bg-[radial-gradient(circle_at_top,_#d1f1ff,_#fdf6e3,_#fce4ec)] flex flex-col justify-center items-center px-4"
     >
       <div
         class="flex flex-col items-center text-center gap-6 max-w-3xl w-full"
@@ -229,15 +229,72 @@
           Contact us today to discover how kakza can empower your teachers,
           leaders, and students.
         </p>
+        <div class="flex flex-col gap-2">
+          <!-- email -->
+          <div class="flex gap-4 items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              class="w-6 h-6 text-gray-700"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m0 8V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2h14a2 2 0 002-2z"
+              />
+            </svg>
+            <a href="mailto:contact@kakza.com">
+              <p class="text-gray-700 md:text-lg text-sm">contact@kakza.com</p>
+            </a>
+          </div>
+          <!-- phone -->
+          <div class="flex gap-4 items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              class="w-6 h-6 text-gray-700"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 5a2 2 0 012-2h1.28a2 2 0 011.85 1.26l1.11 2.77a2 2 0 01-.45 2.15L7.21 11.21a16.01 16.01 0 006.58 6.58l1.03-1.03a2 2 0 012.15-.45l2.77 1.11A2 2 0 0121 19.72V21a2 2 0 01-2 2h-.01C10.61 23 1 13.39 1 3.01V3a2 2 0 012-2z"
+              />
+            </svg>
 
-        <!-- Button -->
-        <a href="mailto:contact@kakza.com">
-          <button
-            class="bg-sky-500 hover:bg-sky-600 text-white font-semibold py-2 md:px-6 px-4  rounded-lg transition duration-200"
-          >
-            Contact Us
-          </button>
-        </a>
+            <p class="text-gray-700 md:text-lg text-sm">+918755839268</p>
+          </div>
+          <!-- location -->
+          <div class="flex gap-4 items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+            class="w-6 h-6 text-gray-700"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 11c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 22s8-5.6863 8-12a8 8 0 10-16 0c0 6.3137 8 12 8 12z"
+              />
+            </svg>
+
+            <p class="text-gray-700 md:text-lg text-sm">Bangalore</p>
+          </div>
+        </div>
       </div>
     </section>
     <footer class="py-8 px-6">
@@ -255,14 +312,11 @@
           <p class="text-sm font-semibold">
             Made with <span class="text-red-600">❤️</span> in India
           </p>
-          <p class="text-xs">© 2025 Kakza. All rights reserved.</p>
         </div>
 
         <!-- Right Side -->
         <div class="flex gap-4 text-sm font-medium">
-          <a href="#" class="hover:underline">Privacy</a>
-          <a href="#" class="hover:underline">Terms</a>
-          <a href="#" class="hover:underline">Contact</a>
+          <p>© 2025 Kakza. All rights reserved.</p>
         </div>
       </div>
     </footer>
