--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="">
     <!-- header -->
-    <header class="bg- shadow sticky top-0 z-50">
+    <header class="bg-white/80 shadow sticky top-0 z-50 backdrop-blur">
       <div
         class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between"
       >
