--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <p
           class="text-xs sm:text-sm drop-shadow-md px-4 py-2 rounded-full bg-sky-500 text-white text-sky-500 group inline-flex items-center justify-center gap-1 mx-auto"
         >
-          Next Gen Arriving soon: The AI-powered teaching enablement platform
-          for schools.
+          Next-Gen Learning Arriving soon
           <span
             class="inline-block transition-transform duration-500 group-hover:translate-x-1"
           >
@@ -273,7 +272,7 @@
           <div class="flex gap-4 items-center">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-            class="w-6 h-6 text-gray-700"
+              class="w-6 h-6 text-gray-700"
               fill="none"
               viewBox="0 0 24 24"
               stroke="currentColor"
@@ -292,7 +291,7 @@
               />
             </svg>
 
-            <p class="text-gray-700 md:text-lg text-sm">Bangalore</p>
+            <p class="text-gray-700 md:text-lg text-sm">Bengaluru</p>
           </div>
         </div>
       </div>
